# ripcord-v2

./: .dockerignore  .env.example  .gitignore  README.md  ROADMAP.md  claude.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  ripcord_main.html  ripcord_main_1.html  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/api/: package.json
apps/client-web/: README.md
apps/desktop/: build.ps1  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/gateway/: package.json
apps/server-api/: README.md  package.json  tsconfig.json
apps/server-auth/: README.md  package.json
apps/server-billing/: README.md
apps/server-gateway/: README.md  package.json  tsconfig.json
apps/server-keyservice/: README.md  package.json
apps/server-worker/: README.md
apps/web-client/: README.md  next.config.ts  package.json
db/migrations/: 0001_init.sql  0002_auth_enhancements.sql  0003_rename_servers_to_hubs.sql  0004_read_states.sql  0005_attachments.sql  0006_audit_hub_id.sql  0007_bans.sql  0008_invites.sql  0009_hub_icon.sql  0010_user_avatar.sql  0011_password_auth.sql  0012_fix_attachments.sql  0013_direct_messages.sql  (+5 more)
docs/: E2EE_STATUS.md
scripts/: README.md  generate-icons.mjs  run-migrations.mjs  run-migrations.ts
tasks/: guiding-principles.md  lessons.md  todo.md
(+193 files in other folders)
